# instock

./: .dockerignore  .env.dist  .gitignore  README.md  docker-compose.yml.dist
api/: Cargo.toml  Dockerfile  sqlx-data.json
api/src/: config.rs  main.rs  server.rs
api/src/product/: models.rs  routes.rs
api/src/tracking/: mod.rs  models.rs  routes.rs
api/src/user/: models.rs  routes.rs
doc/supervisor/: notifier-consumer.conf.dist  scrap-consumer.conf.dist
docker/prod/: docker-compose.yml.dist
front/: .env.development.dist  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
front/public/: manifest.json
front/src/: App.css  App.tsx  index.tsx
front/src/Components/: App.tsx  Badge.tsx  Breadcrumb.tsx  Footer.tsx  Header.tsx  Layout.tsx
front/src/Pages/: About.tsx  Home.tsx  PageNotFound.tsx
queue/: Cargo.toml
queue/src/: config.rs  consumer.rs  models.rs  producer.rs  scrap.rs
sql/: fixtures.sql  init.sql  replibyte.yaml.dist
worker/: Cargo.toml  Dockerfile  sqlx-data.json
worker/src/: config.rs  consumer.rs  mailer.rs  main.rs  model.rs  models.rs  notifier.rs  notifier_consumer.rs  notifier_producer.rs  producer.rs  product.rs  scrap.rs  scrap_consumer.rs  scrap_producer.rs  tracking.rs
worker/src/models/: mod.rs  notifier.rs  scrap.rs
