[package]
name = "instock-api"
version = "0.2.1"
edition = "2021"

[dependencies]
tokio = { version = "^1.0", features = ["full"] }
sqlx = { version = "0.6.0", features = [ "runtime-tokio-native-tls" , "postgres", "uuid", "macros", "chrono", "migrate", "offline" ] }
serde = "1"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
serde_json = "1"
chrono = { version = "*", features = ["serde"] } 
actix-web = "4.0"
actix-cors = "0.6"
validator = { version = "0.15", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15"
syslog = "6.0"
log = "0.4"