[package]
name = "instock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
sqlx = { version = "0.5.10", default-features = false, features = [ "runtime-tokio-native-tls", "postgres", "uuid", "macros", "chrono", "migrate", "offline" ] }
tokio = { version = "^1.0", features = ["full"] }
chrono = "*"
reqwest = { version = "0.11.9", features = ["gzip"] }
scraper = "*"
futures = "*"
lapin = "*"