[package]
name = "instock-rmq"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scrap-consumer"
path = "src/scrap_consumer.rs"

[[bin]]
name = "scrap-producer"
path = "src/scrap_producer.rs"

[[bin]]
name = "notifier-producer"
path = "src/notifier_producer.rs"

[[bin]]
name = "notifier-consumer"
path = "src/notifier_consumer.rs"


[dependencies]
async-global-executor = "*"
futures-lite = "*"
sqlx = { version = "0.6.0", features = [ "runtime-async-std-native-tls" , "postgres", "json", "uuid", "macros", "chrono", "migrate", "offline", "bigdecimal" ] }
serde = "1"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
serde_json = "1"
chrono = { version = "*", features = ["serde"] } 
lapin = "2.0"
dotenv = "0.15"
anyhow = "1.0"
syslog = "6.0"
log = "0.4"
scraper = "*"
isahc = { version = "1.6", features = ["cookies"] }
rand = "0.8"
regex = "1.5"
voca_rs = "1.14"
playwright = "0.0.19"
lettre = { version = "0.10.0-rc.7", default-features = false, features = ["smtp-transport", "async-std1", "async-std1-rustls-tls", "hostname", "builder"] }
bigdecimal = "0.3.0"